php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #81588 TokyoCabinet driver leaks memory
Submitted: 2021-11-03 14:53 UTC Modified: 2021-11-03 14:53 UTC
From: girgias@php.net Assigned: girgias (profile)
Status: Closed Package: DBM/DBA related
PHP Version: 7.4.25RC1 OS:
Private report: No CVE-ID: None
 [2021-11-03 14:53 UTC] girgias@php.net
Description:
------------
MSAN found a memory leak while running the test case.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2021-11-03 14:53 UTC] girgias@php.net
-Assigned To: +Assigned To: girgias
 [2021-11-03 15:03 UTC] git@php.net
Automatic comment on behalf of Girgias
Revision: https://github.com/php/php-src/commit/96dd310c545803391e7a4e4228c0f7d6481f1f97
Log: Fix Bug #81588 TokyoCabinet driver leaks memory
 [2021-11-03 15:03 UTC] git@php.net
-Status: Assigned +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 22:00:01 2026 UTC