Fix Bug #81588 TokyoCabinet driver leaks memory